syntax = "proto3";

option go_package = "github.com/fluffy-bunny/fluffycore-rage-oidc/proto/oidc/models;models";
option java_multiple_files = true;
option java_package = "com.fluffybunny.rageoidc.models";
option csharp_namespace = "FluffyBunny.RageOidc.Oidc.Models";


package proto.oidc.models;

import "google/protobuf/descriptor.proto";
import "google/protobuf/wrappers.proto";
 
message Identity {
    string subject = 1;
    string idp_slug = 2;
    string email = 3;
}

message LinkedIdentities{
    repeated Identity identities = 1;
}

message IdentityUpdate {
    string subject = 1;
    google.protobuf.StringValue email = 3;
}


message LinkedIdentitiesUpdate {
    message Granular{
        repeated Identity add = 1;
        repeated Identity remove = 2;
     }
    oneof update {
        Granular            granular = 1;
        LinkedIdentities    replace = 2;
    }
}

message User {
    Identity            root_identity = 1;
    LinkedIdentities    linked_identities = 2;
}

message UserUpdate {
    IdentityUpdate root_identity = 1;
    LinkedIdentitiesUpdate linked_identities = 2;
}

